wdl-analysis/tests/validation/duplicate-placeholder-options/source.errors
error: a placeholder cannot have more than one option
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:8:31
  │
8 │   String b = "${default="foo" sep="," foo}"
  │                 ------------- ^^^^^^^ duplicate placeholder option is here
  │                 │              
  │                 first placeholder option is here

error: conflicting declaration name `b`
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:9:10
  │
8 │   String b = "${default="foo" sep="," foo}"
  │          - the declaration with the conflicting name is here
9 │   String b = "${default="foo" sep="," true="a" false="b" foo}"
  │          ^ this declaration conflicts with a previously used name

error: a placeholder cannot have more than one option
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:9:31
  │
9 │   String b = "${default="foo" sep="," true="a" false="b" foo}"
  │                 ------------- ^^^^^^^ duplicate placeholder option is here
  │                 │              
  │                 first placeholder option is here

error: a placeholder cannot have more than one option
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:9:39
  │
9 │   String b = "${default="foo" sep="," true="a" false="b" foo}"
  │                 -------------         ^^^^^^^^^^^^^^^^^^ duplicate placeholder option is here
  │                 │                      
  │                 first placeholder option is here

error: a placeholder cannot have more than one option
   ┌─ tests/validation/duplicate-placeholder-options/source.wdl:13:21
   │
13 │     ~{default="foo" sep="," foo}
   │       ------------- ^^^^^^^ duplicate placeholder option is here
   │       │              
   │       first placeholder option is here

error: a placeholder cannot have more than one option
   ┌─ tests/validation/duplicate-placeholder-options/source.wdl:14:21
   │
14 │     ~{default="foo" sep="," true="a" false="b" foo}
   │       ------------- ^^^^^^^ duplicate placeholder option is here
   │       │              
   │       first placeholder option is here

error: a placeholder cannot have more than one option
   ┌─ tests/validation/duplicate-placeholder-options/source.wdl:14:29
   │
14 │     ~{default="foo" sep="," true="a" false="b" foo}
   │       -------------         ^^^^^^^^^^^^^^^^^^ duplicate placeholder option is here
   │       │                      
   │       first placeholder option is here

